# w2rap-contigger

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.travis/: build.sh
cmake/modules/: FindJeMalloc.cmake
src/: Alignment.cc  Alignment.h  AnnotatedContig.cc  AnnotatedContig.h  Badness.h  Basevector.cc  Basevector.h  BasevectorTools.cc  BasevectorTools.h  Bitvector.h  Block.h  BlockAlign.cc  BlockAlign.h  Charvector.cc  Charvector.h  CommonSemanticTypes.h  Compare.h  CompressedSequence.cc  CompressedSequence.h  CoreTools.h  Equiv.cc  Equiv.h  FastIfstream.cc  FastIfstream.h  FastaConverter.cc  FastaConverter.h  FastaFileset.cc  FastaFileset.h  FastaFilestream.cc  FastaFilestream.h  FastaFilestreamPreview.cc  FastaFilestreamPreview.h  FastaNameParser.cc  FastaNameParser.h  FastaVerifier.cc  FastaVerifier.h  Fastavector.cc  Fastavector.h  FetchReads.cc  FetchReads.h  (+90 more)
src/.deps/: AddSuperReads.Po  AffineAlign.Po  AlignFromMutmersAndSW.Po  Alignment.Po  AmbiguityScore.Po  AnnotatedContig.Po  Arith.Po  Array.Po  AssembleGaps.Po  AssemblyCleanupTools.Po  Assert.Po  AssessBestAlignCore.Po  BaseVec.Po  Bases.Po  Basevector.Po  BasevectorTools.Po  BasicGraphics.Po  Bernoulli.Po  BigKPather.Po  BigMapTools.Po  BinaryStream.Po  BitVec.Po  BlockAlign.Po  BuildReadQGraph.Po  CN1PeakFinder.Po  Calculator.Po  CharString.Po  Charvector.Po  Clean200.Po  CleanEfasta.Po  ClusterAligner.Po  CmpSeq.Po  Color.Po  Combinatorics.Po  CompressedSequence.Po  ConsensusScoreModel.Po  ContigActualloc.Po  Correct1.Po  Correct1Pre.Po  CorrectByStack.Po  (+271 more)
src/TenX/: PathFinder_tx.cc  PathFinder_tx.h  TenX_pather.cpp  TenX_pather.h
src/bam/: ReadBAM.cc  ReadBAM.h
src/dna/: Bases.cc  Bases.h  CanonicalForm.h
src/efasta/: AmbiguityScore.cc  EfastaTools.cc  EfastaTools.h
src/equiv/: DisjointSet.cc  DisjointSet.hpp
src/fastg/: FastgGraph.cc  FastgGraph.h  FastgTools.cc  FastgTools.h
src/feudal/: Algorithms.h  BaseVec.cc  BaseVec.h  BinaryStream.cc  BinaryStream.h  BinaryStreamTraits.h  BitVec.cc  BitVec.h  CharString.cc  CharString.h  ChunkDumper.h  FeudalControlBlock.cc  FeudalControlBlock.h  FeudalFileReader.cc  FeudalFileReader.h  FeudalFileWriter.cc  FeudalFileWriter.h  FeudalString.h  FeudalStringDefs.h  FeudalTools.cc  FeudalTools.h  FieldVec.cc  FieldVec.h  FieldVecDefs.h  FilesOutputIterator.h  Generic.cc  Generic.h  HashSet.h  HugeBVec.h  IncrementalWriter.h  IsSizeT.h  Iterator.h  MasterVec.h  Mempool.cc  Mempool.h  ObjectManager.h  Oob.cc  Oob.h  OuterVec.h  OuterVecDefs.h  (+10 more)
src/graph/: Digraph.cc  Digraph.h  DigraphTemplate.h  FindCells.cc  FindCells.h  GraphAlgorithms.h
src/graphics/: BasicGraphics.cc  BasicGraphics.h  Color.cc  Color.h
src/kmers/: BigKMer.h  BigKPather.cc  BigKPather.h  GetNextKmerPair.cc  GetNextKmerPair.h  KMer.h  KMerContext.cc  KMerContext.h  KMerHasher.h  KmerParcels.cc  KmerParcels.h  KmerRecord.cc  KmerRecord.h  KmerShape.h  KmerSpectra.cc  KmerSpectra.h  KmerSpectrumCore.cc  KmerSpectrumCore.h  LongReadPather.cc  LongReadPather.h  MakeLookup.cc  MakeLookup.h  ReadPather.cc  ReadPather.h  ReadPatherDefs.h  SortKmers.cc  SortKmers.h  SortKmersImpl.h  SupportedKmerShapes.h
src/layout/: ContigActualloc.cc  ContigActualloc.h  MainArrays.h  common.cc  common.h
src/lookup/: FlowAlignSummary.cc  FlowAlignSummary.h  Hit.cc  Hit.h  KmerIndex.h  LibInfo.h  LookAlign.cc  LookAlign.h  LookupTable.cc  LookupTable.h  LookupTableBuilder.cc  LookupTableBuilder.h  MakeLookupTable.cc  PerfectCount.cc  PerfectCount.h  PerfectLookup.cc  PerfectLookup.h  QueryLookupTable.cc  QueryLookupTableCore.cc  QueryLookupTableCore.h  SAM.cc  SAM.h  SAM2CRD.cc  SAM2CRD.h
src/math/: Arith.cc  Arith.h  Array.cc  Array.h  Calculator.cc  Calculator.h  Combinatorics.cc  Combinatorics.h  Functions.cc  Functions.h  Hash.h  HoInterval.cc  HoInterval.h  IntDistribution.cc  IntDistribution.h  IntFrequencies.h  IntFunction.h  MapIntInt.h  Matrix.cc  Matrix.h  MatrixTemplate.h  Permutation.cc  Permutation.h  PowerOf2.cc  PowerOf2.h
src/modules/: AssembleGaps_test.cpp  CMakeLists.txt  MergeClusters_test.cpp  clean_03.cc  edge_support.cc  faKmerSpectra.cc  hbv2gfa.cc  outputQuals.cc  patching_04.cc  qgraph_02.cc  readCounts.cc  scaffolding_06.cc  simplify_05.cc  unipaths_01.cc  w2rap-contigger.cc
src/pacbio/: LongRead_pather.cpp  LongRead_pather.h  PathFinder_pb.cc  PathFinder_pb.h  pacbio_pather.cpp  pacbio_pather.h
src/pairwise_aligners/: AffineAlign.cc  AlignFromMutmers.h  AlignFromMutmersAndSW.cc  BalancedMutmerGraph.h  ClusterAligner.cc  ClusterAligner.h  GenAlignments.cc  GenAlignments.h  MakeAligns.cc  MakeAligns.h  MakeAlignsMethod.cc  MakeAlignsMethod.h  MakeAlignsToCompare.h  MaxMutmerFromMer.cc  MaxMutmerFromMer.h  Mutmer.cc  Mutmer.h  MutmerGraph.h  PerfectAlignment.cc  PerfectAlignment.h  ProcessFrequentKmers.cc  ProcessFrequentKmers.h  RemediateAlignment.cc  RemediateAlignment.h  SmithWatAffine.cc  SmithWatAffine.h  SmithWatBanded.cc  SmithWatBanded.h  SmithWatBandedA.cc  SmithWatBandedA.h  SmithWatFree.cc  SmithWatFree.h  SmithWatScore.cc  SmithWatScore.h  SmithWaterman.cc  SmithWaterman.h
src/paths/: AddSuperReads.cc  AddSuperReads.h  AssemblyCleanupTools.cc  AssemblyCleanupTools.h  AssemblyEdit.h  BigMapTools.cc  BigMapTools.h  ExtendUnipathSeqs.cc  ExtendUnipathSeqs.h  FindClosures.cc  FindClosures.h  FindErrorsCore.cc  FindErrorsCore.h  GetNexts.h  HyperBasevector.cc  HyperBasevector.h  HyperEfasta.cc  HyperEfasta.h  HyperKmerPath.cc  HyperKmerPath.h  HyperKmerPathCleaner.cc  HyperKmerPathCleaner.h  KmerBaseBroker.cc  KmerBaseBroker.h  KmerPath.cc  KmerPath.h  KmerPathDatabase.cc  KmerPathDatabase.h  KmerPathInterval.cc  KmerPathInterval.h  KmerPathMuxSearcher.cc  KmerPathMuxSearcher.h  LongReadPatchOptimizer.cc  LongReadPatchOptimizer.h  LongReadTools.cc  LongReadTools.h  MakeAlignsPathsParallelX.cc  MakeAlignsPathsParallelX.h  MergeReadSetsCore.cc  MergeReadSetsCore.h  (+53 more)
src/polymorphism/: Edit.cc  Edit.h
src/random/: Bernoulli.cc  Bernoulli.h  MersenneTwister.cc  MersenneTwister.h  NormalDistribution.cc  NormalDistribution.h  NormalRandom.cc  NormalRandom.h  (+6 more)
(+316 files in other folders)
